--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="password">Password</string>
     <string name="sign_up">Sign Up</string>
     <string name="already_account">Already have an account? Sign In</string>
+    <string name="Subheader_homepage">Stocks</string>
 </resources>
